--- a/manifest.yaml
+++ b/manifest.yaml
@@ -5,4 +5,4 @@ applications:
   memory: 2048M
   buildpacks:
   - python_buildpack
-  command:  streamlit run main.py --server.port 8080 
+  command:  streamlit run st_app.py --server.port 8080 
